# Canvas-Room-Creator

./: CMakeLists.txt  CMakeLists.txt.user.47433c2  README.md  canvasobject.cpp  canvasobject.h  layers.cpp  main.cpp  resources.qrc  roomcanvas.cpp  roomcanvas.h  roomcanvas.ui
AbstractQtWidgets/: canvas.cpp  canvas.h  layers.h  openglwidget.cpp  openglwidget.h  scene.cpp
AssetsManager/: assetsmanager.cpp  assetsmanager.h
CanvasObject/: abstractcanvasobject.cpp  abstractcanvasobject.h
CanvasObject/Atlas/: atlascanvasobject.cpp  atlascanvasobject.h
CanvasObject/Multi/: multicanvasobject.cpp  multicanvasobject.h
CanvasObject/Multi/Masked/: maskedmulticanvasobject.cpp  maskedmulticanvasobject.h
Dialogs/: propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui
Game/: game.cpp  game.h
Interface/: interface.cpp  interface.h
Interface/Buttons/AbstractButton/: abstractbutton.cpp  abstractbutton.h
Interface/Buttons/BlueButton/: bluebutton.cpp  bluebutton.h
Interface/Buttons/BlueCircleButton/: bluecirclebutton.cpp  bluecirclebutton.h
Interface/Buttons/BlueRectButton/: bluerectbutton.cpp  bluerectbutton.h
Interface/Buttons/CircleButton/: circlebutton.cpp  circlebutton.h
Interface/Buttons/Inventory/CategoryButton/: categorybutton.cpp  categorybutton.h
Interface/Buttons/OrangeButton/: orangebutton.cpp  orangebutton.h
Interface/Buttons/OvalButton/: ovalbutton.cpp  ovalbutton.h
Interface/Buttons/WhiteRectButton/: whiterectbutton.cpp  whiterectbutton.h
Interface/Buttons/WhiteSquareButton/: whitesquarebutton.cpp  whitesquarebutton.h
Interface/ChatBubble/: chatbubble.cpp  chatbubble.h
Interface/ChatHistory/: chathistory.cpp  chathistory.h  chathistory_message.cpp  chathistory_message.h
Interface/Common/CanvasObject/: abstractcanvasobject.cpp  abstractcanvasobject.h
Interface/Common/CanvasObject/Atlas/: atlascanvasobject.cpp  atlascanvasobject.h
Interface/Common/CanvasObject/Multi/: multicanvasobject.cpp  multicanvasobject.h
Interface/Common/Containers/GridContainer/: gridcontainer.cpp  gridcontainer.h
Interface/Common/TextBox/: textbox.cpp
Interface/Common/TextLabel/: textlabel.cpp  textlabel.h  textlabelinput.h
Interface/Common/TextLineEdit/: textlineedit.cpp  textlineedit.h  textlineeditinput.cpp  textlineeditinput.h
Interface/Common/TitleLabel/: titlelabel.cpp  titlelabel.h
Interface/DialogGrid/: dialoggrid.cpp  dialoggrid.h
Interface/Dialogs/: abstractdialog.cpp  abstractdialog.h
Interface/Dialogs/YesNoDialog/: yesnodialog.h
Interface/Friend_Requests/: friend_requests.cpp  friend_requests.h
Interface/Loading/: loading.h  loadingbar.cpp  loadingbar.h
Interface/Mail/: mail.cpp  mail.h
Interface/Map/: map.cpp  map.h
Interface/MenuBar/: menubar.cpp  menubar.h
Interface/Moderator/: moderator.cpp  moderator.h
Interface/News/: news.cpp  news.h
Interface/Notification/: notification.cpp  notification.h
Interface/PlayerCard/: playercard.cpp  playercard.h
Interface/PlayerCard/Inventory/: inventory.cpp  inventory.h
Interface/Screens/LoadingScreen/: loading.cpp  loading.h  loadingbar.cpp  loadingbar.h
Interface/Screens/LoginScreen/LoginScreen_NewPlayer/: loginscreen_newplayer.cpp  loginscreen_newplayer.h
Interface/Screens/LoginScreen/OldPlayerPage/: oldplayerpage.cpp  oldplayerpage.h
Interface/Screens/LoginScreen/ServerSelectionPage/: serverselectionpage.cpp  serverselectionpage.h
Interface/SvgGridContainer/: gridcontainer.cpp  gridcontainer.h
Interface/TextBox/: textbox.h
Interface/TextLabel/: textlabel.cpp  textlabelinput.cpp
Interface/Widgets/BackgroundContainer/: backgroundcontainer.cpp  backgroundcontainer.h
Interface/Widgets/Buttons/AbstractButton/: abstractbutton.cpp  abstractbutton.h
Interface/Widgets/Buttons/BlueButton/: bluebutton.cpp  bluebutton.h
Interface/Widgets/Buttons/BlueRectButton/: bluerectbutton.cpp  bluerectbutton.h
Interface/Widgets/Buttons/CheckBoxButton/: checkboxbutton.cpp  checkboxbutton.h
Interface/Widgets/Buttons/CircleButton/: circlebutton.cpp  circlebutton.h
Interface/Widgets/Buttons/OrangeButton/: orangebutton.cpp  orangebutton.h
Interface/Widgets/Buttons/OvalButton/: ovalbutton.cpp  ovalbutton.h
Interface/Widgets/Buttons/WhiteRectButton/: whiterectbutton.cpp  whiterectbutton.h
Interface/Widgets/Buttons/WhiteSquareButton/: whitesquarebutton.cpp  whitesquarebutton.h
Interface/Widgets/DialogGrid/: dialoggrid.cpp  dialoggrid.h
Interface/Widgets/Dialogs/: abstractdialog.cpp  abstractdialog.h
Interface/Widgets/Dialogs/YesNoDialog/: yesnodialog.cpp  yesnodialog.h
Interface/Widgets/Inputs/TextInput/: textinput.cpp  textinput.h
Interface/Widgets/PlayerCard/: playercard.cpp  playercard.h
Interface/Widgets/PlayerCard/Badge/: badge.cpp  badge.h
Interface/Widgets/Settings/: settings.cpp  settings.h
Interface/Widgets/ToolBar/: toolbar.cpp  toolbar.h
Interface/World/ChatBubble/: chatbubble.cpp  chatbubble.h
Interface/World/ChatHistory/: chathistory.cpp  chathistory.h  chathistory_message.cpp  chathistory_message.h
Interface/World/Penguin/: clothes.h
LocalizationManager/: localizationmanager.cpp  localizationmanager.h
Objects/Badge/: badge.cpp  badge.h
Objects/Constants/: constants.h
Objects/Items/: items.cpp  items.h
Objects/MaskedCanvasObject/: maskedcanvasobject.cpp  maskedcanvasobject.h
Objects/Penguin/: clothes.cpp  clothingitem.cpp  clothingitem.h  penguin.cpp  penguin.h
Objects/Penguin/Paper/: penguinpaper.cpp  penguinpaper.h
Objects/Penguin/Sprite/: penguinsprite.cpp  penguinsprite.h  penguinspritebase.cpp  penguinspritebase.h
Objects/Player/: player.cpp  player.h  playerfactory.cpp  playerfactory.h
SoundManager/: soundmanager.cpp
ThreadPoolManager/: threadpoolmanager.cpp  threadpoolmanager.h
ThreadPoolManager/LoadingBarWorker/: loadingbarworker.cpp  loadingbarworker.h
ThreadPoolManager/PenguinSpriteMoveWorker/: penguinspritemoveworker.cpp  penguinspritemoveworker.h
assets/: assets_de.json  assets_en.json  assets_fr.json  assets_pt.json  assets_ru.json
widgets/: canvas.cpp  canvas.h  openglwidget.h  scene.h
(+35 files in other folders)
